--- a/LoveLove/Modules/Home/Header/QMNavigateCollectionViewCell.xib
+++ b/LoveLove/Modules/Home/Header/QMNavigateCollectionViewCell.xib
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11201" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11542" systemVersion="16B2555" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -12,16 +14,18 @@
             <rect key="frame" x="0.0" y="0.0" width="131" height="88"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <frame key="frameInset" width="131" height="87"/>
+                <rect key="frame" x="0.0" y="0.0" width="131" height="87"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="9Ue-qQ-D6q">
+                        <rect key="frame" x="45.5" y="17" width="40" height="40"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="40" id="58m-vg-6UF"/>
                             <constraint firstAttribute="width" constant="40" id="ImX-8U-RQ1"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YHh-S1-g8j">
+                        <rect key="frame" x="25.5" y="62" width="80" height="13"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="80" id="G3c-lp-mbO"/>
                             <constraint firstAttribute="height" constant="13" id="Hts-in-YbJ"/>
@@ -50,7 +54,7 @@
                 <outlet property="photoView" destination="9Ue-qQ-D6q" id="wE8-e0-KV3"/>
                 <outlet property="titleLabel" destination="YHh-S1-g8j" id="2f8-jQ-SBz"/>
             </connections>
-            <point key="canvasLocation" x="215" y="101"/>
+            <point key="canvasLocation" x="-100" y="-78"/>
         </tableViewCell>
     </objects>
 </document>
