--- a/LoveLove/Modules/Home/WaterLayout/WaterCollectionViewCell.xib
+++ b/LoveLove/Modules/Home/WaterLayout/WaterCollectionViewCell.xib
@@ -4,7 +4,6 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -31,9 +30,9 @@
             </constraints>
             <size key="customSize" width="87" height="162"/>
             <connections>
-                <outlet property="imageView" destination="dlf-8m-WAO" id="p0B-to-ZLD"/>
+                <outlet property="imageView" destination="dlf-8m-WAO" id="oIb-ti-bG9"/>
             </connections>
-            <point key="canvasLocation" x="22" y="273"/>
+            <point key="canvasLocation" x="-189" y="90"/>
         </collectionViewCell>
     </objects>
 </document>
